bandera de colombia

--- a/programa.html
+++ b/programa.html
@@ -9,11 +9,17 @@
     pincel.fillStyle = "lightgrey"  //es una propiedad
     pincel.fillRect(0,0,600,400); // es una funcion
 
-    pincel.fillStyle = "red"  //es una propiedad
-    pincel.fillRect(0,0,200,400); // es una funcion
+   
+    pincel.fillStyle = "yellow"  //es una propiedad
+    pincel.fillRect(0,0,600,135); // es una funcion
 
+
+    
     pincel.fillStyle = "blue"  //es una propiedad
-    pincel.fillRect(200,0,200,400); // es una funcion
+    pincel.fillRect(0,135,600,135); // es una funcion
+
+    pincel.fillStyle = "red"  //es una propiedad
+    pincel.fillRect(0,270,600,135); // es una funcion
 
     
 </script>
