crea un triangulo verde de base

--- a/programa.html
+++ b/programa.html
@@ -11,7 +11,13 @@
 
    
     //division de canvas con colores
-    pincel.fillStyle = "yellow"  //es una propiedad
+    /*La instrucción pincel.fillStyle es una propiedad del
+     objeto pincel y se le está atribuyendo el color verde.
+      Por su parte, la instrucción pincel.fillRect() es una 
+      función (método) del objeto pincel que en nuestro 
+      código la usábamos para diseñar (dibujar) las figuras.
+    */
+      pincel.fillStyle = "yellow"  //es una propiedad
     pincel.fillRect(0,0,600,135); // es una funcion
     
     pincel.fillStyle = "blue"  //es una propiedad
