--- a/programa.html
+++ b/programa.html
@@ -8,7 +8,7 @@
     //se crea un cuadro con el tamaño especifico
     pincel.fillStyle = "lightgrey"  //es una propiedad
     pincel.fillRect(0,0,600,400); // es una funcion
-
+//&esto es una prueba
    
     //division de canvas con colores
     /*La instrucción pincel.fillStyle es una propiedad del
