--- a/programa.html
+++ b/programa.html
@@ -25,7 +25,7 @@
 
     pincel.fillStyle = "red"  //es una propiedad
     pincel.fillRect(0,270,600,135); // es una funcion
-
+// todo melo
 //crea un triangulo 
 pincel.fillStyle="pink";
 pincel.beginPath();
