--- a/productos.html
+++ b/productos.html
@@ -13,6 +13,13 @@
 
     <header>
         <h1> <img src="imgandruzsoft/Andrusoft..png" alt="logo"></h1>
+
+    <ul>
+        <li>Home</li>
+        <li>Productos</li>
+        <li>Cantacto</li>
+
+    </ul>
     </header>
     
 </body>
