--- a/productos.html
+++ b/productos.html
@@ -15,9 +15,9 @@
         <h1> <img src="imgandruzsoft/Andrusoft..png" alt="logo"></h1>
 
     <ul>
-        <li>Home</li>
-        <li>Productos</li>
-        <li>Cantacto</li>
+        <li><a href="index.html">Home</a></li>
+        <li> <a href="index.html">Productos</a> </li>
+        <li><a href="index.html">Contacto</a></li>
 
     </ul>
     </header>
